<b>2009-03-02</b>

* Facebook: "Today" flights posted earlier, at 01:00 EST
* Facebook: Multiple "today" flights can be posted

<b>2009-02-27</b>

* Facebook app can now post update on flight day
* Preferences added to Facebook app
* Tooltips added to OpenLayers map controls
* Bug: Flight edits no longer show up on Facebook, stats

<b>2009-02-23</b>

* Bug: Calculate PHP GC distance correctly for flights where src==dest

<b>2009-02-23</b>

* KML exports (Google Earth etc) added!
* Wrote 3D path code in php/greatcircle.php
* Bug: Filters for CSV exports fixed

<b>2009-02-22</b>

* "Analyze" now includes count of countries, avg length, duration
* php/stats.php partly JSON-ified
* "Trip" filter prominence reduced
* Clearer "Help" icons
* "X" icon now OpenFlights Purple(tm)

<b>2009-02-09</b>

* Facebook app now includes a map of flights
* Bug: Facebook updates show airports in correct order

<b>2009-02-06</b>

* GAD replaced with OurAirports
* Over 1000 new airports imported from OurAirports
* Added DB index to IATA column for faster searching
* Require at least four digits of precision for new airports

<b>2009-02-05</b>

* Cleaner appearance for statsbox, AJAX icon when loading
* Login form only shown after loading complete
* Bug: "Analyze" works again on IE7
* Bug: Popups work again on IE7 (bug in Prototype?)
* Bug: Syntax error fixed, importing works again

<b>2009-02-04</b>

* Airport/airline databases released
* Airport/airline search now usable without logging in
* Bug: Duplicated airlines when importing

<b>2009-02-01</b>

* Departure time and arrival time now supported
* Timezones and daylight savings time (DST) added to airport database/search
* Distance, duration, date, departure time, arrival time kept synced to each other
* Distance, duration validated before saving
* FlightMemory import now supports arrival times
* CSV format imports and exports departure times
* CSV spec updated to 0.4 (optional departure time added)